--- a/global.css
+++ b/global.css
@@ -5,13 +5,18 @@ style {
 }
 
 html, body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+  
 }
 
 html {
   font-size: 15px;
-  background-color: #a9a9a9;
+  background-color: lightblue;
 }
 
 body {
@@ -35,7 +40,7 @@ p, label, input, li {
 }
 
 h1 {
-  font-size:30px;
+  font-size: 30px;
   text-align: center;
   text-shadow: 2px 2px 10px rgb(255, 0, 0);
 }
@@ -58,7 +63,7 @@ header {
   display: flex;
   flex-flow: row wrap;
   background-color: red;
-
+  padding:30px;
 }
 
 body>* {
@@ -68,7 +73,7 @@ body>* {
 
 nav {
   background-color: rgb(40, 126, 255);
-  padding: 1%;
+  padding: 0%;
 }
 
 main, article, aside, footer, section {
@@ -83,12 +88,12 @@ h1 {
 
 header img {
   display: block;
-  height: 60px;
-  padding-top: 20.15px;
+  height: 160px;
+  padding-top: 20px;
 }
 
 main nav, header nav {
-  height: 80px;
+  height: 100px;
   flex: 100%;
   display: flex;
 }
@@ -96,7 +101,7 @@ main nav, header nav {
 main nav ul, header nav ul {
   padding: 0;
   list-style-type: none;
-  flex: 2;
+  flex: 3;
   display: flex;
 }
 
@@ -108,9 +113,9 @@ main nav li, header nav li {
 
 main nav span, main nav a, header nav a, header nav span {
   display: inline-block;
-  font-size: 1.4rem;
-  height: 1.4rem;
-  line-height: 1.7;
+  font-size: 25px;
+  height: 10px;
+  line-height: 1, 5px;
   text-transform: uppercase;
   text-decoration: none;
   color: black;
@@ -139,7 +144,7 @@ main aside nav {
   flex-direction: column;
 }
 
-main aside nav ul {
+ aside nav ul {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -148,8 +153,8 @@ main aside nav ul {
   height: 300px;
 }
 
-main aside nav ul li a {
-  line-height: 1em;
+ aside nav ul li a {
+  line-height: 1, 5px;
   display: block;
   width: 100%;
 }
@@ -201,26 +206,34 @@ table td {
 table tr {
   border-top: 1px solid;
 }
-img{
-width:1200px;
-display:flex;
+
+img {
+  width: 1200px;
+  display: flex;
 
 }
-.titulo > h1{
-width:100%;
-font-weight:400px;
-letter-spacing:10px;
+
+.titulo>h1 {
+  width: 100%;
+  font-weight: 400px;
+  letter-spacing: 10px;
 }
 
 .noticias1 {
-display:flex;
-flex-flow:wrap;
-max-width:50%;
-flex-basis:50%;
+  display: flex;
+  flex-flow: wrap;
+  max-width: 50%;
+  flex-basis: 50%;
 }
+
 .foto1 {
+  display: flex;
+  width: 100%;
+  flex: 0 0 500px;
+  text-align: justify;
+}
+
+.main {
 display:flex;
-width:100%;
-flex: 0 0 500px;
-text-align:justify;
+flex-flow:column;
 }
