--- a/global.css
+++ b/global.css
@@ -233,7 +233,80 @@ img {
   text-align: justify;
 }
 
-.main {
+main {
 display:flex;
-flex-flow:column;
+flex-flow:row;
 }
+.formulario{
+display:flex;
+flex-direction:column-reverse;
+background-color:orange;
+border-color:blue;
+border: 5px solid blue;
+}
+
+.formulario2{
+  display:flex;
+  flex-direction:column;
+  background-color:rgb(255, 81, 0);
+  border-color:blue;
+  border: 5px solid red;
+}
+
+.tabla1{
+background-color:rgb(255, 167, 36);
+border:5px solid brown;
+outline: 5px solid;
+font-family:Arial, Helvetica, sans-serif;
+
+}
+.tabla2 {
+background-color:rgb(19, 255, 58);
+border: 5px solid rgb(2, 48, 253);
+outline: 5px solid;
+font-family:Arial, Helvetica, sans-serif;
+}
+caption{
+text-transform:uppercase;
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+background-color:rgb(255, 238, 0);
+}
+
+.fotointer1{
+display:flex;
+justify-content:center;
+
+}
+figure{
+display:flex;
+justify-content:baseline;
+}
+
+h2{
+font-size:40px;
+}
+
+section{
+border: 5px solid;
+}
+.santander1{
+background-color:orange;
+}
+
+.santander2{
+background-color:rgb(180, 51, 255);
+}
+
+.santander3{
+  background-color: rgb(49, 160, 49);
+  }
+  
+  .fotosantander1{
+  display: flex;
+  width: 100%;
+  flex: 0 0 500px;
+  }
+  h3{
+  text-align:left;
+  margin-top:200px;
+  }
