--- a/global.css
+++ b/global.css
@@ -11,7 +11,7 @@ html, body {
 
 * {
   box-sizing: border-box;
-  
+
 }
 
 html {
@@ -63,7 +63,7 @@ header {
   display: flex;
   flex-flow: row wrap;
   background-color: red;
-  padding:30px;
+  padding: 30px;
 }
 
 body>* {
@@ -144,7 +144,7 @@ main aside nav {
   flex-direction: column;
 }
 
- aside nav ul {
+aside nav ul {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -153,7 +153,7 @@ main aside nav {
   height: 300px;
 }
 
- aside nav ul li a {
+aside nav ul li a {
   line-height: 1, 5px;
   display: block;
   width: 100%;
@@ -234,79 +234,131 @@ img {
 }
 
 main {
-display:flex;
-flex-flow:row;
-}
-.formulario{
-display:flex;
-flex-direction:column-reverse;
-background-color:orange;
-border-color:blue;
-border: 5px solid blue;
+  display: flex;
+  flex-flow: row;
 }
 
-.formulario2{
-  display:flex;
-  flex-direction:column;
-  background-color:rgb(255, 81, 0);
-  border-color:blue;
+.formulario {
+  display: flex;
+  flex-direction: column-reverse;
+  background-color: orange;
+  border-color: blue;
+  border: 5px solid blue;
+}
+
+.formulario2 {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 81, 0);
+  border-color: blue;
   border: 5px solid red;
 }
 
-.tabla1{
-background-color:rgb(255, 167, 36);
-border:5px solid brown;
-outline: 5px solid;
-font-family:Arial, Helvetica, sans-serif;
+.tabla1 {
+  background-color: rgb(255, 167, 36);
+  border: 5px solid brown;
+  outline: 5px solid;
+  font-family: Arial, Helvetica, sans-serif;
 
 }
+
 .tabla2 {
-background-color:rgb(19, 255, 58);
-border: 5px solid rgb(2, 48, 253);
-outline: 5px solid;
-font-family:Arial, Helvetica, sans-serif;
-}
-caption{
-text-transform:uppercase;
-font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-background-color:rgb(255, 238, 0);
+  background-color: rgb(19, 255, 58);
+  border: 5px solid rgb(2, 48, 253);
+  outline: 5px solid;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.fotointer1{
-display:flex;
-justify-content:center;
-
-}
-figure{
-display:flex;
-justify-content:baseline;
+caption {
+  text-transform: uppercase;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: rgb(255, 238, 0);
 }
 
-h2{
-font-size:40px;
+.fotointer1 {
+  display: flex;
+  justify-content: center;
+
 }
 
-section{
-border: 5px solid;
-}
-.santander1{
-background-color:orange;
+figure {
+  display: flex;
+  justify-content: baseline;
 }
 
-.santander2{
-background-color:rgb(180, 51, 255);
+h2 {
+  font-size: 40px;
 }
 
-.santander3{
+section {
+  border: 5px solid;
+}
+
+.santander1 {
+  background-color: orange;
+}
+
+.santander2 {
+  background-color: rgb(180, 51, 255);
+}
+
+.santander3 {
   background-color: rgb(49, 160, 49);
-  }
-  
-  .fotosantander1{
+}
+
+.fotosantander1 {
   display: flex;
   width: 100%;
   flex: 0 0 500px;
+}
+
+h3 {
+  text-align: left;
+  margin-top: 200px;
+}
+
+.nba1 {
+  display: flex;
+  width: 200px;
+  max-width:100%;
+}
+
+.parrafon{
+  display:flex;
+flex-direction:row-reverse;
+border: 5px solid;
+outline:10px yellow;
+
+}
+
+.parrafon1 {
+  background-color:rgba(131, 18, 97, 0.884);
   }
-  h3{
-  text-align:left;
-  margin-top:200px;
-  }
+}
+
+.parrafon2 {
+  background-color: rgb(255, 238, 0);
+}
+
+.parrafon3 {
+  background-color: rgb(255, 238, 0);
+}
+
+
+.euroliga1{
+  background-color: rgb(255, 238, 0);
+
+}
+
+.euroliga2{
+  background-color: rgb(90, 199, 17);
+
+}
+
+.euroliga{
+display:flex;
+justify-content:center;
+border:5px solid;
+}
+
+
